# litcoin-mcp

./: .gitignore  README.md  pyproject.toml  run_server.py
litcoin_mcp/: __init__.py  config.py  server.py
litcoin_mcp/services/: embedding_service.py  neo4j_service.py  semantic_search_service.py
litcoin_mcp/tools/: graph_tools.py  semantic_tools.py
