[project]
name = "litcoin-mcp"
version = "0.1.0"
description = "LitCoin MCP Server"
readme = "README.md"
authors = [
    { name = "hyi", email = "hongyi@renci.org" }
]
requires-python = ">=3.10"
dependencies = [
    "fastmcp==2.14.5",
    "neo4j>=6.1.0",
    "openai>=2.24.0",
]

[project.scripts]
litcoin-mcp = "litcoin_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["litcoin_mcp"]

