[project]
name = "litcoin-mcp"
version = "0.1.0"
description = "LitCoin MCP Server - Semantic + Structural Knowledge Graph query for AI agents"
readme = "README.md"
authors = [
    { name = "Hong Yi" }
]
requires-python = ">=3.10"
keywords = ["mcp", "biomedical", "semantic", "knowledge-graph", "litcoin"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "fastmcp==2.14.5",
    "neo4j>=6.1.0",
    "openai>=2.24.0",
]

[project.urls]
Homepage = "https://github.com/hyi/litcoin-mcp"
Repository = "https://github.com/hyi/litcoin-mcp"
Issues = "https://github.com/hyi/litcoin-mcp/issues"

[project.scripts]
litcoin-mcp = "litcoin_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["litcoin_mcp"]

